@@ -1,6 +1,10 @@
 package org.upyog.dashboard.extractor.impl;
 
+import org.upyog.dashboard.constants.DashboardExtractorConstants;
+import org.apache.commons.lang3.StringUtils;
 import org.upyog.dashboard.config.DashboardProperties;
+import org.upyog.dashboard.util.HierarchyParser;
+import org.upyog.dashboard.util.DatabaseQueryExecutor;
 
 import java.time.LocalDate;
 import java.time.ZoneOffset;
@@ -10,9 +14,10 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
+import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.stereotype.Component;
+import org.upyog.dashboard.pgr.model.RawPgrMetric;
+import org.upyog.dashboard.pgr.mapper.PGRRowMapper;
 import org.upyog.dashboard.common.constants.Module;
 import org.upyog.dashboard.config.SchemaMappingConfig;
 import org.upyog.dashboard.extractor.ModuleExtractor;
@@ -21,6 +26,7 @@ import org.upyog.dashboard.model.DashboardData;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 /**
@@ -30,39 +36,28 @@ import lombok.extern.slf4j.Slf4j;
  */
 @Slf4j
 @Component
-public class PgrModuleExtractor implements ModuleExtractor {
+@RequiredArgsConstructor
+public class PgrModuleExtractor implements ModuleExtractor<List<DashboardData>> {
 
-	@Autowired(required = false)
-	private NamedParameterJdbcTemplate namedParameterJdbcTemplate;
+	private static final String GROUP_BY = "groupBy";
+	private static final String GROUP_BY_DEPARTMENT = "department";
+	private static final String BUCKETS = "buckets";
 
-	@Autowired
-	private SchemaMappingConfig schemaMappingConfig;
+	private final DatabaseQueryExecutor queryExecutor;
+	private final SchemaMappingConfig schemaMappingConfig;
+	private final ObjectMapper objectMapper;
+	private final DashboardProperties dashboardProperties;
+	private final HierarchyParser hierarchyParser;
 
-	@Autowired
-	private ObjectMapper objectMapper;
-
-	@Autowired
-	private DashboardProperties dashboardProperties;
-
-	private String ulb;
-	private String ward;
-	private String region;
-	private String state;
 	private String dbTenantId;
-	private int dbMaxAttempts;
-	private long dbBaseDelayMs;
-	private long dbMaxDelayMs;
 
+	/**
+	 * Initialises the database tenant ID from {@link DashboardProperties} after bean construction.
+	 */
 	@jakarta.annotation.PostConstruct
 	public void init() {
-		this.ulb = dashboardProperties.getMetricUlb();
-		this.ward = dashboardProperties.getMetricWard();
-		this.region = dashboardProperties.getMetricRegion();
-		this.state = dashboardProperties.getMetricState();
-		this.dbTenantId = dashboardProperties.getMetricUlb();
-		this.dbMaxAttempts = dashboardProperties.getDbMaxAttempts();
-		this.dbBaseDelayMs = dashboardProperties.getDbBaseDelayMs();
-		this.dbMaxDelayMs = dashboardProperties.getDbMaxDelayMs();
+		String state = dashboardProperties.getMetricState();
+		this.dbTenantId = (StringUtils.isNotBlank(state)) ? state : dashboardProperties.getTenantId();
 	}
 
 	@Override
@@ -70,141 +65,128 @@ public class PgrModuleExtractor implements ModuleExtractor {
 		return Module.PGR;
 	}
 
+	/**
+	 * {@inheritDoc}
+	 *
+	 * <p>Extracts PGR metrics for {@code targetDate} by executing the combined metrics query
+	 * and mapping each row to a {@link org.upyog.dashboard.model.DashboardData}.
+	 *
+	 * @param targetDate the date for which PGR metrics should be extracted
+	 * @return a list of {@link org.upyog.dashboard.model.DashboardData} payloads, one per tenant row;
+	 *         returns an empty list when no query config is found or a database error occurs
+	 */
 	@Override
-	public DashboardData extractData(LocalDate targetDate) {
-		String dateStr = targetDate.format(DateTimeFormatter.ofPattern("dd-MM-yyyy"));
+	public List<DashboardData> extractData(LocalDate targetDate) {
+		String dateStr = targetDate.format(DateTimeFormatter.ofPattern(DashboardExtractorConstants.DATE_FORMAT));
 		long startTime = targetDate.atStartOfDay(ZoneOffset.UTC).toInstant().toEpochMilli();
 		long endTime = targetDate.plusDays(1).atStartOfDay(ZoneOffset.UTC).toInstant().toEpochMilli() - 1;
-		String tenantId = dbTenantId;
 
-		Map<String, Object> params = Map.of("startTime", startTime, "endTime", endTime, "tenantId", tenantId);
-
-		Map<String, Object> metrics = new LinkedHashMap<>();
-
-		int uniqueCitizens = 0;
-		List<Map<String, Object>> slaAchievementBuckets = new ArrayList<>();
-		List<Map<String, Object>> completionRateBuckets = new ArrayList<>();
-		List<Map<String, Object>> statusBuckets = new ArrayList<>();
-		List<Map<String, Object>> channelBuckets = new ArrayList<>();
-		List<Map<String, Object>> departmentBuckets = new ArrayList<>();
-		List<Map<String, Object>> categoryBuckets = new ArrayList<>();
-		List<Map<String, Object>> reopenedBuckets = new ArrayList<>();
-		List<Map<String, Object>> openBuckets = new ArrayList<>();
-		List<Map<String, Object>> assignedBuckets = new ArrayList<>();
-		List<Map<String, Object>> avgSolutionBuckets = new ArrayList<>();
-		List<Map<String, Object>> rejectedBuckets = new ArrayList<>();
-		List<Map<String, Object>> reassignedBuckets = new ArrayList<>();
-		List<Map<String, Object>> reassignRequestedBuckets = new ArrayList<>();
-		List<Map<String, Object>> closedBuckets = new ArrayList<>();
-		List<Map<String, Object>> resolvedBuckets = new ArrayList<>();
+		MapSqlParameterSource params = new MapSqlParameterSource()
+				.addValue(DashboardExtractorConstants.PARAM_START_TIME, startTime)
+				.addValue(DashboardExtractorConstants.PARAM_END_TIME, endTime)
+				.addValue(DashboardExtractorConstants.PARAM_TENANT_ID, dbTenantId);
+		List<DashboardData> results = new ArrayList<>();
 
 		SchemaMappingConfig.ModuleQueries pgrQueries = schemaMappingConfig.getQueriesForModule(Module.PGR);
-		if (pgrQueries != null && pgrQueries.getCombinedMetricsQuery() != null && namedParameterJdbcTemplate != null) {
-			try {
-				Map<String, Object> combinedResult = executeQueryWithRetry(pgrQueries.getCombinedMetricsQuery(), params);
-				uniqueCitizens = getIntegerValue(combinedResult.get("uniquecitizens"));
-				slaAchievementBuckets = parseJsonBuckets(combinedResult.get("slaachievementjson"));
-				completionRateBuckets = parseJsonBuckets(combinedResult.get("completionratejson"));
-				statusBuckets = parseJsonBuckets(combinedResult.get("complaintsbystatusjson"));
-				channelBuckets = parseJsonBuckets(combinedResult.get("complaintsbychanneljson"));
-				departmentBuckets = parseJsonBuckets(combinedResult.get("complaintsbydepartmentjson"));
-				categoryBuckets = parseJsonBuckets(combinedResult.get("complaintsbycategoryjson"));
-				reopenedBuckets = parseJsonBuckets(combinedResult.get("todaysreopenedcomplaintsjson"));
-				openBuckets = parseJsonBuckets(combinedResult.get("todaysopencomplaintsjson"));
-				assignedBuckets = parseJsonBuckets(combinedResult.get("todaysassignedcomplaintsjson"));
-				avgSolutionBuckets = parseJsonBuckets(combinedResult.get("averagesolutiontimejson"));
-				rejectedBuckets = parseJsonBuckets(combinedResult.get("todaysrejectedcomplaintsjson"));
-				reassignedBuckets = parseJsonBuckets(combinedResult.get("todaysreassignedcomplaintsjson"));
-				reassignRequestedBuckets = parseJsonBuckets(combinedResult.get("todaysreassignrequestedcomplaintsjson"));
-				closedBuckets = parseJsonBuckets(combinedResult.get("todaysclosedcomplaintsjson"));
-				resolvedBuckets = parseJsonBuckets(combinedResult.get("todaysresolvedcomplaintsjson"));
-			} catch (Exception exception) {
-				log.warn("PgrModuleExtractor | Exception during DB metrics extraction, utilizing empty defaults: {}", exception.getMessage());
-			}
+		if (pgrQueries == null || pgrQueries.getCombinedMetricsQuery() == null) {
+			return results;
 		}
 
-		// Fill metrics exactly matching sample JSON schema
-		metrics.put("slaAchievement", List.of(Map.of("groupBy", "department", "buckets", slaAchievementBuckets)));
-		metrics.put("completionRate", List.of(Map.of("groupBy", "department", "buckets", completionRateBuckets)));
-		metrics.put("uniqueCitizens", uniqueCitizens);
+		try {
+			List<RawPgrMetric> combinedResults = queryExecutor.executeQueryWithRetry(pgrQueries.getCombinedMetricsQuery(), params, PGRRowMapper.COMBINED_ROW_MAPPER, "PgrModuleExtractor");
+			for (RawPgrMetric combinedResult : combinedResults) {
+				results.add(buildDashboardData(combinedResult, dateStr));
+			}
+		} catch (Exception exception) {
+			log.warn("Exception during DB metrics extraction, utilizing empty defaults: {}", exception.getMessage());
+		}
 
-		metrics.put("todaysComplaints", List.of(
-				Map.of("groupBy", "status", "buckets", statusBuckets),
-				Map.of("groupBy", "channel", "buckets", channelBuckets),
-				Map.of("groupBy", "department", "buckets", departmentBuckets),
-				Map.of("groupBy", "category", "buckets", categoryBuckets)
-		));
+		return results;
+	}
 
-		metrics.put("todaysReopenedComplaints", List.of(Map.of("groupBy", "department", "buckets", reopenedBuckets)));
-		metrics.put("todaysOpenComplaints", List.of(Map.of("groupBy", "department", "buckets", openBuckets)));
-		metrics.put("todaysAssignedComplaints", List.of(Map.of("groupBy", "department", "buckets", assignedBuckets)));
-		metrics.put("averageSolutionTime", List.of(Map.of("groupBy", "department", "buckets", avgSolutionBuckets)));
-		metrics.put("todaysRejectedComplaints", List.of(Map.of("groupBy", "department", "buckets", rejectedBuckets)));
-		metrics.put("todaysReassignedComplaints", List.of(Map.of("groupBy", "department", "buckets", reassignedBuckets)));
-		metrics.put("todaysReassignRequestedComplaints", List.of(Map.of("groupBy", "department", "buckets", reassignRequestedBuckets)));
-		metrics.put("todaysClosedComplaints", List.of(Map.of("groupBy", "department", "buckets", closedBuckets)));
-		metrics.put("todaysResolvedComplaints", List.of(Map.of("groupBy", "department", "buckets", resolvedBuckets)));
+	/**
+	 * Builds a {@link org.upyog.dashboard.model.DashboardData} from a raw combined-metrics result-set row.
+	 *
+	 * @param combinedResult a single row returned by the combined metrics query, keyed by column alias
+	 * @param dateStr        the formatted date string (dd-MM-yyyy) for the extraction target date
+	 * @return a fully populated {@link org.upyog.dashboard.model.DashboardData}
+	 */
+	private DashboardData buildDashboardData(RawPgrMetric combinedResult, String dateStr) {
+		String currentTenantId = combinedResult.getTenantid();
+		Map<String, String> parsedHierarchy = hierarchyParser.parseTenantId(currentTenantId);
 
 		return DashboardData.builder()
 				.date(dateStr)
 				.module(getModule().name())
-				.ward(ward)
-				.ulb(ulb)
-				.region(region)
-				.state(state)
-				.metrics(metrics)
+				.ward(parsedHierarchy.get(DashboardExtractorConstants.KEY_WARD))
+				.ulb(parsedHierarchy.get(DashboardExtractorConstants.KEY_ULB))
+				.region(parsedHierarchy.get(DashboardExtractorConstants.KEY_REGION))
+				.state(parsedHierarchy.get(DashboardExtractorConstants.KEY_STATE))
+				.metrics(buildMetrics(combinedResult))
 				.build();
 	}
 
-	private Integer getIntegerValue(Object object) {
-		if (object instanceof Number) {
-			return ((Number) object).intValue();
-		}
-		return 0;
+	/**
+	 * Constructs the {@code metrics} map for a single tenant row by reading the JSON columns
+	 * returned by the combined metrics query and converting them to structured bucket lists.
+	 *
+	 * @param combinedResult a single row returned by the combined metrics query
+	 * @return a {@link java.util.LinkedHashMap} of metric names to their structured values
+	 */
+	private Map<String, Object> buildMetrics(RawPgrMetric combinedResult) {
+		Map<String, Object> metrics = new LinkedHashMap<>();
+		metrics.put("slaAchievement", List.of(Map.of(GROUP_BY, GROUP_BY_DEPARTMENT, BUCKETS,
+				parseJsonBuckets(combinedResult.getSlaachievementjson()))));
+		metrics.put("completionRate", List.of(Map.of(GROUP_BY, GROUP_BY_DEPARTMENT, BUCKETS,
+				parseJsonBuckets(combinedResult.getCompletionratejson()))));
+		metrics.put("uniqueCitizens", combinedResult.getUniquecitizens() != null ? combinedResult.getUniquecitizens() : 0);
+		metrics.put("todaysComplaints", List.of(
+				Map.of(GROUP_BY, "status", BUCKETS, parseJsonBuckets(combinedResult.getComplaintsbystatusjson())),
+				Map.of(GROUP_BY, "channel", BUCKETS, parseJsonBuckets(combinedResult.getComplaintsbychanneljson())),
+				Map.of(GROUP_BY, GROUP_BY_DEPARTMENT, BUCKETS, parseJsonBuckets(combinedResult.getComplaintsbydepartmentjson())),
+				Map.of(GROUP_BY, "category", BUCKETS, parseJsonBuckets(combinedResult.getComplaintsbycategoryjson()))
+		));
+		metrics.put("todaysReopenedComplaints", List.of(Map.of(GROUP_BY, GROUP_BY_DEPARTMENT, BUCKETS,
+				parseJsonBuckets(combinedResult.getTodaysreopenedcomplaintsjson()))));
+		metrics.put("todaysOpenComplaints", List.of(Map.of(GROUP_BY, GROUP_BY_DEPARTMENT, BUCKETS,
+				parseJsonBuckets(combinedResult.getTodaysopencomplaintsjson()))));
+		metrics.put("todaysAssignedComplaints", List.of(Map.of(GROUP_BY, GROUP_BY_DEPARTMENT, BUCKETS,
+				parseJsonBuckets(combinedResult.getTodaysassignedcomplaintsjson()))));
+		metrics.put("averageSolutionTime", List.of(Map.of(GROUP_BY, GROUP_BY_DEPARTMENT, BUCKETS,
+				parseJsonBuckets(combinedResult.getAveragesolutiontimejson()))));
+		metrics.put("todaysRejectedComplaints", List.of(Map.of(GROUP_BY, GROUP_BY_DEPARTMENT, BUCKETS,
+				parseJsonBuckets(combinedResult.getTodaysrejectedcomplaintsjson()))));
+		metrics.put("todaysReassignedComplaints", List.of(Map.of(GROUP_BY, GROUP_BY_DEPARTMENT, BUCKETS,
+				parseJsonBuckets(combinedResult.getTodaysreassignedcomplaintsjson()))));
+		metrics.put("todaysReassignRequestedComplaints", List.of(Map.of(GROUP_BY, GROUP_BY_DEPARTMENT, BUCKETS,
+				parseJsonBuckets(combinedResult.getTodaysreassignrequestedcomplaintsjson()))));
+		metrics.put("todaysClosedComplaints", List.of(Map.of(GROUP_BY, GROUP_BY_DEPARTMENT, BUCKETS,
+				parseJsonBuckets(combinedResult.getTodaysclosedcomplaintsjson()))));
+		metrics.put("todaysResolvedComplaints", List.of(Map.of(GROUP_BY, GROUP_BY_DEPARTMENT, BUCKETS,
+				parseJsonBuckets(combinedResult.getTodaysresolvedcomplaintsjson()))));
+		return metrics;
 	}
 
+	/**
+	 * Deserialises a JSON array string into a list of bucket maps. Returns an empty list
+	 * when the input is {@code null}, blank, or equals {@code "[]"}.
+	 *
+	 * @param object the raw value from the query result row; expected to be a JSON array string
+	 * @return a list of {@code Map<String, Object>} bucket entries, or an empty list on failure
+	 */
 	private List<Map<String, Object>> parseJsonBuckets(Object object) {
-		if (object == null) return List.of();
+		if (object == null) {
+			return List.of();
+		}
 		String jsonStr = object.toString();
-		if (jsonStr.isBlank() || "[]".equals(jsonStr)) return List.of();
+		if (StringUtils.isBlank(jsonStr) || "[]".equals(jsonStr)) {
+			return List.of();
+		}
 		try {
 			return objectMapper.readValue(jsonStr, new TypeReference<List<Map<String, Object>>>() {});
 		} catch (Exception exception) {
+			log.debug("Failed to parse JSON buckets: {}", exception.getMessage());
 			return List.of();
 		}
-	}
-
-	private Map<String, Object> executeQueryWithRetry(String query, Map<String, Object> params) {
-		int attempt = 0;
-		while (true) {
-			attempt++;
-			try {
-				return namedParameterJdbcTemplate.queryForMap(query, params);
-			} catch (Exception exception) {
-				if (attempt >= dbMaxAttempts) {
-					log.error("PgrModuleExtractor | DB query failed after {} attempts.", attempt, exception);
-					throw exception;
-				}
-				long backoff = calculateDbBackoffWithJitter(attempt);
-				log.warn("PgrModuleExtractor | DB query failed (attempt {}/{}). Retrying in {} ms. Error: {}", 
-						attempt, dbMaxAttempts, backoff, exception.getMessage());
-				try {
-					Thread.sleep(backoff);
-				} catch (InterruptedException ie) {
-					Thread.currentThread().interrupt();
-					throw new RuntimeException("DB query retry interrupted", ie);
-				}
-			}
-		}
-	}
-
-	private long calculateDbBackoffWithJitter(int attempt) {
-		int power = Math.min(attempt - 1, 30);
-		long expDelay = dbBaseDelayMs * (1L << power);
-		if (expDelay < 0) {
-			expDelay = dbMaxDelayMs;
-		}
-		long currentMaxDelay = Math.min(dbMaxDelayMs, expDelay);
-		return java.util.concurrent.ThreadLocalRandom.current().nextLong(0, currentMaxDelay + 1);
 	}
 }
